ufw.rules
root@vps:~# cat /etc/ufw/user.rules 
*filter
:ufw-user-input - [0:0]
:ufw-user-output - [0:0]
:ufw-user-forward - [0:0]
:ufw-before-logging-input - [0:0]
:ufw-before-logging-output - [0:0]
:ufw-before-logging-forward - [0:0]
:ufw-user-logging-input - [0:0]
:ufw-user-logging-output - [0:0]
:ufw-user-logging-forward - [0:0]
:ufw-after-logging-input - [0:0]
:ufw-after-logging-output - [0:0]
:ufw-after-logging-forward - [0:0]
:ufw-logging-deny - [0:0]
:ufw-logging-allow - [0:0]
:ufw-user-limit - [0:0]
:ufw-user-limit-accept - [0:0]
### RULES ###

### tuple ### allow any any 0.0.0.0/0 any 0.0.0.0/0 in_any
-A ufw-user-input -i any -j ACCEPT

### tuple ### route:allow any any 0.0.0.0/0 any 10.128.207.0/24 in_incusbr0
-A ufw-user-forward -i incusbr0 -s 10.128.207.0/24 -j ACCEPT

### tuple ### allow any 53 0.0.0.0/0 any 0.0.0.0/0 out_incusbr0
-A ufw-user-output -o incusbr0 -p tcp --dport 53 -j ACCEPT
-A ufw-user-output -o incusbr0 -p udp --dport 53 -j ACCEPT

### tuple ### allow any 80 0.0.0.0/0 any 0.0.0.0/0 out_incusbr0
-A ufw-user-output -o incusbr0 -p tcp --dport 80 -j ACCEPT
-A ufw-user-output -o incusbr0 -p udp --dport 80 -j ACCEPT

### tuple ### allow any 443 0.0.0.0/0 any 0.0.0.0/0 out_incusbr0
-A ufw-user-output -o incusbr0 -p tcp --dport 443 -j ACCEPT
-A ufw-user-output -o incusbr0 -p udp --dport 443 -j ACCEPT

### tuple ### allow any 22 0.0.0.0/0 any 0.0.0.0/0 in_any
-A ufw-user-input -i any -p tcp --dport 22 -j ACCEPT
-A ufw-user-input -i any -p udp --dport 22 -j ACCEPT

### tuple ### allow any any 0.0.0.0/0 any 0.0.0.0/0 out_eth0
-A ufw-user-output -o eth0 -j ACCEPT

### tuple ### deny any any 0.0.0.0/0 any 0.0.0.0/0 out_incusbr0
-A ufw-user-output -o incusbr0 -j DROP

### tuple ### allow any 22 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 22 -j ACCEPT
-A ufw-user-input -p udp --dport 22 -j ACCEPT

### END RULES ###

### LOGGING ###
-A ufw-after-logging-forward -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-I ufw-logging-deny -m conntrack --ctstate INVALID -j RETURN -m limit --limit 3/min --limit-burst 10
-A ufw-logging-deny -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-A ufw-logging-allow -j LOG --log-prefix "[UFW ALLOW] " -m limit --limit 3/min --limit-burst 10
### END LOGGING ###

### RATE LIMITING ###
-A ufw-user-limit -m limit --limit 3/minute -j LOG --log-prefix "[UFW LIMIT BLOCK] "
-A ufw-user-limit -j REJECT
-A ufw-user-limit-accept -j ACCEPT
### END RATE LIMITING ###
COMMIT
